item page loads dynamically now

--- a/BooKtebi/src/app/components/item/item.component.html
+++ b/BooKtebi/src/app/components/item/item.component.html
@@ -12,7 +12,7 @@
                 <br>
              </p>
               <p class="">
-                By (author)  Delia Owens
+                By (author)  {{book.author_name}}
              </p>
          </div>
      </div>
