--- a/BooKtebi/src/app/components/header/header.component.html
+++ b/BooKtebi/src/app/components/header/header.component.html
@@ -25,7 +25,7 @@
       </a>
 
     </div>
-
+    <app-widget-search-bar></app-widget-search-bar>
     <div class="nav-item"><i class="fa fa-search"></i></div>
 
     <div class="nav-item">
