--- a/BooKtebi/src/app/components/header/header.component.html
+++ b/BooKtebi/src/app/components/header/header.component.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="nav-item">
-      <a [routerLink]="['/basket']">
+      <a [routerLink]="['/cart']">
         <i class="fa fa-shopping-cart"></i>
       </a>
 
