created cart element component

--- a/BooKtebi/src/app/pages/cart/cart.component.html
+++ b/BooKtebi/src/app/pages/cart/cart.component.html
@@ -3,34 +3,14 @@
         <div class="header">
             <app-header></app-header>
             <h1 class="shop" style="margin-top: 2%;">Shopping basket details</h1>
-        </div>      
+        </div>
 
         <div class="firstbox">
-            <div class="container" style="margin: 2%;">
-                <div class="row">
-                    <div class="col-6">
-                        <h1 class="titlee">Where the crawdels sing</h1>  
-                        <img class="bookcover" src="./assets/img/bookcopy.png">            
-                    </div>
-                    <div class="col-3" style="align-items: center; margin-top: 7%;">
-                        <p class="paper">paperback English Delia ownes <br></p>
-                        <h1 class="price1">$ 19.9</h1>
-                        <p class="Available-dispatched">Available-dispatched from the UK in three busniness day</p>
-                    </div>
-                    <div class="col-3">
-                        <div class="price">
-                            <div class="ups">
-                                <img src="./assets/img/up.png" class="up"> <br>
-                                        <span class="k">
-                                                1
-                                         </span> <br>
-                                <img src="./assets/img/up.png"  class="down">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+            <app-cart-element></app-cart-element>
+            <app-cart-element></app-cart-element>
+            <app-cart-element></app-cart-element>
+
+          </div>
 
        <div class="secondbox">
                 <div class="container">
@@ -60,8 +40,8 @@
                     </div>
                 </div>
        </div>
-    
-        
+
+
     </div>
 </div>
 
