--- a/BooKtebi/src/app/pages/signup/signup.component.html
+++ b/BooKtebi/src/app/pages/signup/signup.component.html
@@ -3,7 +3,7 @@
     <div class="col-md-6 ">
       <div class="container">
 
-        <form [formGroup]="signupForm" (ngSubmit)="signUp()" class="signupForm">
+        <form  class="signupForm">
           <div class="row">
             <div class="input-wrapper col-md-6">
               <input
@@ -11,7 +11,7 @@
                 name="fisrtName"
                 class="form-control"
                 placeholder="Fisrt Name"
-                formControlName="first_name"
+                id="first_name"
               />
             </div>
             <div class="input-wrapper col-md-6">
@@ -20,7 +20,7 @@
                 name="lastName"
                 class="form-control"
                 placeholder="Last Name"
-                formControlName="last_name"
+                id="last_name"
               />
             </div>
             <div class="input-wrapper col-md-12">
@@ -29,7 +29,7 @@
                 name="phone"
                 class="form-control"
                 placeholder="Phone Number"
-                formControlName="phone"
+                id="phone"
               />
             </div>
             <div class="input-wrapper col-md-12">
@@ -38,7 +38,7 @@
                 name="email"
                 class="form-control"
                 placeholder="E-mail Adress"
-                formControlName="email"
+                id="mail"
               />
             </div>
             <div class="input-wrapper col-md-12">
@@ -47,7 +47,7 @@
                 name="password"
                 class="form-control"
                 placeholder="Password"
-                formControlName="password"
+                id="pass"
               />
             </div>
             <div class="input-wrapper radio-wrapper col-md-12">
@@ -65,13 +65,13 @@
                   value="true"
                   class="policy-input"
                   style="margin-left: 40px"
-                  formControlName="policy"
+                  id="policy"
                 />
                 <span class="checkmark"></span>
               </label>
             </div>
           </div>
-          <button type="submit" class="signup-btn">Sign Up</button>
+          <button (click)='signup()' type="submit" class="signup-btn">Sign Up</button>
           <div class="signin-wrapper mt-5">
             <hr />
             <p>ALREADY HAVE AN ACCOUNT ? <a routerLink="/login" > SIGN IN</a></p>
