cart page update

--- a/BooKtebi/src/app/components/cart/cart.component.html
+++ b/BooKtebi/src/app/components/cart/cart.component.html
@@ -1,47 +1,10 @@
-<header class="section-header">
-    <section class="header-main border-bottom">
-        <div class="container">
-    <div class="row align-items-center">
-        <div class="col-lg-2 col-4">
-           <a href="#">Company Name</a>
-        </div>
-        <div class="col-lg-6 col-sm-12">
-            <form action="#" class="search">
-                <div class="input-group w-100">
-                    <input type="text" class="form-control" placeholder="Search">
-                    <div class="input-group-append">
-                      <button class="btn btn-primary" type="submit">
-                        <i class="fa fa-search"></i>
-                      </button>
-                    </div>
-                </div>
-            </form> <!-- search-wrap .end// -->
-        </div> <!-- col.// -->
-        <div class="col-lg-4 col-sm-6 col-12">
-            <div class="widgets-wrap float-md-right">
-                <div class="widget-header  mr-3">
-                    <a href="#" class="icon icon-sm rounded-circle border"><i class="fa fa-shopping-cart"></i></a>
-                    <span class="badge badge-pill badge-danger notify">0</span>
-                </div>
-                <div class="widget-header icontext">
-                    <a href="#" class="icon icon-sm rounded-circle border"><i class="fa fa-user"></i></a>
-                    <div class="text">
-                        <span class="text-muted">Welcome!</span>
-                        <div> 
-                            <a href="#">Sign in</a> |  
-                            <a href="#">Register</a>
-                        </div>
-                    </div>
-                </div>
-    
-            </div> <!-- widgets-wrap.// -->
-        </div> <!-- col.// -->
-    </div> <!-- row.// -->
-        </div> <!-- container.// -->
-    </section> <!-- header-main .// -->
-    </header> <!-- section-header.// -->
-    
-    
+
+<div class="cart  fill">
+    <div class="container-fluid ">
+<div class="header">
+    <app-header></app-header>
+  </div>
+
     
     <!-- ========================= SECTION PAGETOP ========================= -->
     <section class="section-pagetop bg">
@@ -72,9 +35,9 @@
     <tr>
         <td>
             <figure class="itemside">
-                <div class="aside"><img src="assets/images/items/1.jpg" class="img-sm"></div>
+                <div class="aside"><img src="assets/img/bookcopy.png" class="img-sm"></div>
                 <figcaption class="info">
-                    <a href="#" class="title text-dark">Some name of item goes here nice</a>
+                    <a href="#" class="title text-dark">Where the crawdels sing</a>
                     <p class="text-muted small">Size: XL, Color: blue, <br> Brand: Gucci</p>
                 </figcaption>
             </figure>
@@ -89,21 +52,21 @@
         </td>
         <td> 
             <div class="price-wrap"> 
-                <var class="price">$1156.00</var> 
-                <small class="text-muted"> $315.20 each </small> 
+                <var class="price">$40.00</var> 
+               
             </div> <!-- price-wrap .// -->
         </td>
         <td class="text-right"> 
-        <a data-original-title="Save to Wishlist" title="" href="" class="btn btn-light mr-2" data-toggle="tooltip"> <i class="fa fa-heart"></i></a> 
+        <a data-original-title="Save to Wishlist" title="" href="" class="btn btn-light mr-2" data-toggle="tooltip" style="background-color: #A58FFF;"> <i class="fa fa-heart"></i></a> 
         <a href="" class="btn btn-light"> Remove</a>
         </td>
     </tr>
     <tr>
         <td>
             <figure class="itemside">
-                <div class="aside"><img src="assets/images/items/2.jpg" class="img-sm"></div>
+                <div class="aside"><img src="assets/img/book2.jpg" class="img-sm" width="200" ></div>
                 <figcaption class="info">
-                    <a href="#" class="title text-dark">Product name  goes here nice</a>
+                    <a href="#" class="title text-dark">Memory</a>
                     <p class="text-muted small">Size: XL, Color: blue, <br> Brand: Gucci</p>
                 </figcaption>
             </figure>
@@ -118,54 +81,29 @@
         </td>
         <td> 
             <div class="price-wrap"> 
-                <var class="price">$149.97</var> 
-                <small  class="text-muted"> $75.00 each </small>  
+                <var class="price">$15.00</var> 
+                
             </div> <!-- price-wrap .// -->
         </td>
         <td class="text-right"> 
-        <a data-original-title="Save to Wishlist" title="" href="" class="btn btn-light mr-2" data-toggle="tooltip"> <i class="fa fa-heart"></i></a> 
+        <a data-original-title="Save to Wishlist" title="" href="" class="btn btn-light mr-2" data-toggle="tooltip" style="background-color: #A58FFF;" > <i class="fa fa-heart"></i></a> 
         <a href="" class="btn btn-light btn-round"> Remove</a>
         </td>
     </tr>
     <tr>
-        <td>
-            <figure class="itemside">
-                <div class="aside"><img src="assets/images/items/3.jpg" class="img-sm"></div>
-                <figcaption class="info">
-                    <a href="#" class="title text-dark">Another name of some product goes just here</a>
-                    <p class="small text-muted">Size: XL, Color: blue,  Brand: Tissot</p>
-                </figcaption>
-            </figure>
-        </td>
-        <td> 
-            <select class="form-control">
-                <option>1</option>
-                <option>2</option>  
-                <option>3</option>  
-            </select> 
-        </td>
-        <td> 
-            <div class="price-wrap"> 
-                <var class="price">$98.00</var> 
-                <small class="text-muted"> $578.00 each</small> 
-            </div> <!-- price-wrap .// -->
-        </td>
-        <td class="text-right"> 
-            <a data-original-title="Save to Wishlist" title="" href="" class="btn btn-light mr-2" data-toggle="tooltip"> <i class="fa fa-heart"></i></a> 
-            <a href="" class="btn btn-light btn-round"> Remove</a>
-        </td>
+ 
     </tr>
     </tbody>
     </table>
     
     <div class="card-body border-top">
-        <a href="#" class="btn btn-primary float-md-right"> Make Purchase <i class="fa fa-chevron-right"></i> </a>
+        <a href="#" class="btn btn-primary float-md-right" style="background-color: #A58FFF;"> Make Purchase <i class="fa fa-chevron-right"></i> </a>
         <a href="#" class="btn btn-light"> <i class="fa fa-chevron-left"></i> Continue shopping </a>
     </div>  
     </div> <!-- card.// -->
     
-    <div class="alert alert-success mt-3">
-        <p class="icontext"><i class="icon text-success fa fa-truck"></i> Free Delivery within 1-2 weeks</p>
+    <div class="alert alert-success mt-3" style="background-color: #E9F2FF;">
+        <p class="icontext"><i class="icon text-success fa fa-truck" ></i> Free Delivery within 1-2 weeks</p>
     </div>
     
         </main> <!-- col.// -->
@@ -178,7 +116,7 @@
                         <div class="input-group">
                             <input type="text" class="form-control" name="" placeholder="Coupon code">
                             <span class="input-group-append"> 
-                                <button class="btn btn-primary">Apply</button>
+                                <button class="btn btn-primary" style="background-color: #A58FFF;">Apply</button>
                             </span>
                         </div>
                     </div>
@@ -201,7 +139,9 @@
                         </dl>
                         <hr>
                         <p class="text-center mb-3">
-                            <img src="assets/images/misc/payments.png" height="26">
+                           <span> <img src="assets/img/visa1.png" height="60"> <br>
+                                  <img src="assets/img/master1.png" alt="" height="60">
+                           </span>
                         </p>
                         
                 </div> <!-- card-body.// -->
@@ -235,14 +175,10 @@
     <!-- ========================= SECTION  END// ========================= -->
     
     <!-- ========================= FOOTER ========================= -->
-    <footer class="section-footer border-top padding-y">
-        <div class="container">
-            <p class="float-md-right"> 
-                &copy; Copyright 2021 All rights reserved
-            </p>
-            <p>
-                <a href="#">Terms and conditions</a>
-            </p>
-        </div><!-- //container -->
-    </footer>
+
+<div class="footer"><app-footer></app-footer></div>
+
     <!-- ========================= FOOTER END // ========================= -->
+</div>
+
+</div>
