cart page backend side, images show now on home and cart page

--- a/BooKtebi/src/app/components/item/item.component.html
+++ b/BooKtebi/src/app/components/item/item.component.html
@@ -41,7 +41,7 @@
             Donwload pdf <br>
             $ 25.99
         </button>
-        <button class="but1">
+        <button class="but1" (click)="addProductToCart(book)">
             Add to cart
         </button>
     </div>   <!-- buttons div-->
