--- a/BooKtebi/src/app/components/product/product.component.html
+++ b/BooKtebi/src/app/components/product/product.component.html
@@ -1,7 +1,7 @@
   <div class="product">
     <div class="product-details">
       <div class="product-image">
-        <img src="../../../assets/img/book.png" alt="book" />
+        <img [src]='image' alt="book" />
       </div>
       <div class="product-name">{{book.name}}</div>
       <div class="product-date">{{book.date}}</div>
