--- a/BooKtebi/src/app/components/cart/cart.component.html
+++ b/BooKtebi/src/app/components/cart/cart.component.html
@@ -6,14 +6,13 @@
   </div>
 
     
-    <!-- ========================= SECTION PAGETOP ========================= -->
+    
     <section class="section-pagetop bg">
     <div class="container">
         <h2 class="title-page">Shopping cart</h2>
-    </div> <!-- container //  -->
+    </div> 
     </section>
-    <!-- ========================= SECTION INTRO END// ========================= -->
-    
+
     <!-- ========================= SECTION CONTENT ========================= -->
     <section class="section-content padding-y">
     <div class="container">
@@ -25,7 +24,7 @@
     <table class="table table-borderless table-shopping-cart">
     <thead class="text-muted">
     <tr class="small text-uppercase">
-      <th scope="col">Product</th>
+      <th scope="col"> Product</th>
       <th scope="col" width="120">Quantity</th>
       <th scope="col" width="120">Price</th>
       <th scope="col" class="text-right" width="200"> </th>
@@ -35,10 +34,10 @@
     <tr>
         <td>
             <figure class="itemside">
-                <div class="aside"><img src="assets/img/bookcopy.png" class="img-sm"></div>
+                <div class="aside"><img src="assets/img/bookcopy.png" class="img-sm" alt="Where the crawdels sing"></div>
                 <figcaption class="info">
                     <a href="#" class="title text-dark">Where the crawdels sing</a>
-                    <p class="text-muted small">Size: XL, Color: blue, <br> Brand: Gucci</p>
+                    <p class="text-muted small" id="author">Delia Owens <br>  English </p>
                 </figcaption>
             </figure>
         </td>
@@ -54,7 +53,7 @@
             <div class="price-wrap"> 
                 <var class="price">$40.00</var> 
                
-            </div> <!-- price-wrap .// -->
+            </div>
         </td>
         <td class="text-right"> 
         <a data-original-title="Save to Wishlist" title="" href="" class="btn btn-light mr-2" data-toggle="tooltip" style="background-color: #A58FFF;"> <i class="fa fa-heart"></i></a> 
@@ -66,8 +65,8 @@
             <figure class="itemside">
                 <div class="aside"><img src="assets/img/book2.jpg" class="img-sm" width="200" ></div>
                 <figcaption class="info">
-                    <a href="#" class="title text-dark">Memory</a>
-                    <p class="text-muted small">Size: XL, Color: blue, <br> Brand: Gucci</p>
+                    <a href="#" class="title text-dark">The Imprefections of Memory</a>
+                    <p class="text-muted small" id="author">Angelina Aludo <br> English</p>
                 </figcaption>
             </figure>
         </td>
@@ -83,7 +82,7 @@
             <div class="price-wrap"> 
                 <var class="price">$15.00</var> 
                 
-            </div> <!-- price-wrap .// -->
+            </div>
         </td>
         <td class="text-right"> 
         <a data-original-title="Save to Wishlist" title="" href="" class="btn btn-light mr-2" data-toggle="tooltip" style="background-color: #A58FFF;" > <i class="fa fa-heart"></i></a> 
@@ -127,15 +126,15 @@
                 <div class="card-body">
                         <dl class="dlist-align">
                           <dt>Total price:</dt>
-                          <dd class="text-right">USD 568</dd>
+                          <dd class="text-right">USD 55</dd>
                         </dl>
                         <dl class="dlist-align">
                           <dt>Discount:</dt>
-                          <dd class="text-right">USD 658</dd>
+                          <dd class="text-right">USD 10</dd>
                         </dl>
                         <dl class="dlist-align">
                           <dt>Total:</dt>
-                          <dd class="text-right  h5"><strong>$1,650</strong></dd>
+                          <dd class="text-right  h5"><strong>$45</strong></dd>
                         </dl>
                         <hr>
                         <p class="text-center mb-3">
@@ -149,11 +148,9 @@
         </aside> <!-- col.// -->
     </div>
     
-    </div> <!-- container .//  -->
+    </div> 
     </section>
-    <!-- ========================= SECTION CONTENT END// ========================= -->
-    
-    <!-- ========================= SECTION  ========================= -->
+
     <section class="section-name bg padding-y">
     <div class="container">
     <h6>Payment and refund policy</h6>
@@ -170,9 +167,8 @@
     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
     proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     
-    </div><!-- container // -->
+    </div>
     </section>
-    <!-- ========================= SECTION  END// ========================= -->
     
     <!-- ========================= FOOTER ========================= -->
 
