--- a/BooKtebi/src/app/components/header/header.component.html
+++ b/BooKtebi/src/app/components/header/header.component.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="nav-item">
-      <a [routerLink]="['/basket']">
+      <a [routerLink]="['/cart']">
         <i class="fa fa-shopping-cart"></i>
       </a>
 
@@ -29,7 +29,7 @@
     <div class="nav-item"><i class="fa fa-search"></i></div>
 
     <div class="nav-item">
-     <a [routerLink]="['/generalsettings']">
+     <a  routerLink={{this.url}}>
       <i class="fa fa-user"></i>
     </a>
     </div>
